Fixed naming across all parts
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/docs-ui/src/content/components/search-field.mdx
+++ b/docs-ui/src/content/components/search-field.mdx
@@ -62,13 +62,13 @@ Here's a simple SearchField with a description.
 
 ### Collapsible
 
-You can make the SearchField collapsible by setting the `collapsible` prop to `true`.
+You can make the SearchField collapsible by setting the `startCollapsed` prop to `true`.
 
 <Snippet
   align="center"
   py={4}
   open
-  preview={<SearchFieldSnippet story="Collapsible" />}
+  preview={<SearchFieldSnippet story="StartCollapsed" />}
   code={searchFieldCollapsibleSnippet}
 />
 
