--- a/docs-ui/src/app/theming/page.mdx
+++ b/docs-ui/src/app/theming/page.mdx
@@ -13,8 +13,8 @@ even more straightforward.
 
 ## Light & Dark modes
 
-By default, Backstage UI supports both light and dark modes using the `data-theme` attribute.
-The light theme is applied by default if no `data-theme` attribute is specified. To create
+By default, Backstage UI supports both light and dark modes using the `data-theme-mode` attribute.
+The light theme is applied by default if no `data-theme-mode` attribute is specified. To create
 a custom theme, you'll need to define both light and dark modes as outlined below. If
 only one mode is defined, the other will fall back to the default theme.
 
