add page to docs-ui, fix aria labels, compatibility with one password icons, create custom button
Signed-off-by: Hermione Bird <hermioneb@spotify.com>

--- a/docs-ui/src/app/page.mdx
+++ b/docs-ui/src/app/page.mdx
@@ -86,6 +86,11 @@ building it incrementally with not conflict with the existing theming system.
     href="/components/search-field"
   />
   <ComponentCard
+    title="PasswordField"
+    description="A password field component to help you input passwords."
+    href="/components/password-field"
+  />
+  <ComponentCard
     title="Select"
     description="A select component to help you select items."
     href="/components/select"
