--- a/docs-ui/src/app/theming/page.mdx
+++ b/docs-ui/src/app/theming/page.mdx
@@ -226,7 +226,7 @@ color of your app.
 
 ### Foreground colors
 
-Foreground colours are meant to work in pair with a background colours. Typeically this would work
+Foreground colours are meant to work in pair with a background colours. Typically this would work
 for icons, texts, shapes, ... Use a matching name to know what foreground color to use. These colors
 are prefixed with `fg` to make it easier to identify.
 
