Restructure useStyles hook
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/docs-ui/src/content/components/box.mdx
+++ b/docs-ui/src/content/components/box.mdx
@@ -22,7 +22,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
 
 <Snippet
   py={4}
-  preview={<BoxSnippet story="Preview" />}
+  preview={<BoxSnippet story="Default" />}
   code={boxPreviewSnippet}
   align="center"
 />
