Set browser title in BUI Header component.
Makes the BUI Header component set the browser title based on config
(`app.title` or "Backstage" if no config is set) and the `title` prop
passed to the Header component. This aligns the behavior somewhat to
what the old Header component from core-components does.

Signed-off-by: Johan Persson <johanopersson@gmail.com>

--- a/docs-ui/src/content/components/header-page.mdx
+++ b/docs-ui/src/content/components/header-page.mdx
@@ -32,6 +32,10 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
 
 <CodeBlock code={usage} />
 
+## Browser Title
+
+The HeaderPage component automatically sets the browser title based on its `title` prop. When used alongside a Header component (recommended), the browser title becomes `{headerPageTitle} | {headerTitle} | {app.title}`. If used without the Header component, the browser title will simply be set to the `title` prop.
+
 ## API reference
 
 <PropsTable data={propDefs} />
