--- a/docs-ui/src/content/components/avatar.mdx
+++ b/docs-ui/src/content/components/avatar.mdx
@@ -7,6 +7,7 @@ import {
   snippetUsage,
   snippetSizes,
   snippetFallback,
+  snippetPurpose,
 } from './avatar.props';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
@@ -56,6 +57,17 @@ If the image is not available, the avatar will show the initials of the name.
   open
   preview={<AvatarSnippet story="Fallback" />}
   code={snippetFallback}
+/>
+
+### The `purpose` prop
+
+Control how the avatar is announced to screen readers using the `purpose` prop.
+
+<Snippet
+  align="center"
+  py={4}
+  preview={<AvatarSnippet story="Purpose" />}
+  code={snippetPurpose}
 />
 
 <Theming component="Avatar" />
