feat(ui): add searchable and multiple selection support to Select component
Enhanced the Select component with search filtering and multi-selection capabilities through new searchable, selectionMode, and searchPlaceholder props.

Breaking changes:

- The SelectProps interface now accepts a generic type parameter for selection mode

Implementation details:

- Created SelectTrigger, SelectContent, and SelectListBox components for modular composition
- Integrated react-aria's Autocomplete and SearchField for search functionality
- Added support for multiple selection mode
- Added "No results found" empty state when search returns no matches
- Improved CSS organization and updated visual styling for better consistency
- Exported Option type as public API for type safety
- Updated API reports and added comprehensive Storybook stories
- Added documentation with examples for searchable and multiple selection modes

Migration guide:

If using SelectProps type directly, update the type parameter:

```diff
- SelectProps
+ SelectProps<'single' | 'multiple'>
```

Component usage remains backward compatible - existing Select implementations require no changes.

Signed-off-by: Johan Persson <johanopersson@gmail.com>

--- a/docs-ui/src/content/select.mdx
+++ b/docs-ui/src/content/select.mdx
@@ -11,6 +11,9 @@ import {
   selectDisabledSnippet,
   selectResponsiveSnippet,
   selectIconSnippet,
+  selectSearchableSnippet,
+  selectMultipleSnippet,
+  selectSearchableMultipleSnippet,
 } from './select.props';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
@@ -85,6 +88,42 @@ Here's a view when the select is disabled.
   open
   preview={<SelectSnippet story="Disabled" />}
   code={selectDisabledSnippet}
+/>
+
+### Searchable
+
+Here's a view when the select has searchable filtering.
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<SelectSnippet story="Searchable" />}
+  code={selectSearchableSnippet}
+/>
+
+### Multiple Selection
+
+Here's a view when the select allows multiple selections.
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<SelectSnippet story="MultipleSelection" />}
+  code={selectMultipleSnippet}
+/>
+
+### Searchable with Multiple Selection
+
+Here's a view when the select combines search and multiple selection.
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<SelectSnippet story="SearchableMultiple" />}
+  code={selectSearchableMultipleSnippet}
 />
 
 ### Responsive
