feat(ui): add loading state to Button and ButtonIcon components
Add optional `loading` prop to both Button and ButtonIcon components that displays
a spinner and disables interaction while async operations are in progress.

Implementation details:
- Uses React Aria's ProgressBar with indeterminate state for spinner
- Displays RiLoader4Line icon with smooth rotation animation
- Wraps content in container with opacity transition when loading
- Accessible via aria-label "Loading" on progress indicator
- Component definitions updated with content, spinner class names and loading data attribute

Documentation:
- Added Loading examples to both Button and ButtonIcon docs showing interactive demos
- Updated props tables with loading boolean prop
- Created Storybook stories covering all variants, sizes, and with icons

Signed-off-by: Johan Persson <johanopersson@gmail.com>

--- a/docs-ui/src/content/button-icon.mdx
+++ b/docs-ui/src/content/button-icon.mdx
@@ -9,6 +9,7 @@ import {
   buttonIconVariantsSnippet,
   buttonIconSizesSnippet,
   buttonIconDisabledSnippet,
+  buttonIconLoadingSnippet,
   buttonIconResponsiveSnippet,
   buttonIconAsLinkSnippet,
 } from './button-icon.props';
@@ -72,6 +73,18 @@ Here's a view when buttons are disabled.
   open
   preview={<ButtonIconSnippet story="Disabled" />}
   code={buttonIconDisabledSnippet}
+/>
+
+### Loading
+
+Here's a view when buttons are in a loading state.
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<ButtonIconSnippet story="Loading" />}
+  code={buttonIconLoadingSnippet}
 />
 
 ### Responsive
