--- a/docs-ui/src/content/button.mdx
+++ b/docs-ui/src/content/button.mdx
@@ -9,6 +9,7 @@ import {
   buttonSizesSnippet,
   buttonIconsSnippet,
   buttonDisabledSnippet,
+  buttonLoadingSnippet,
   buttonResponsiveSnippet,
   buttonAsLinkSnippet,
 } from './button.props';
@@ -84,6 +85,18 @@ Here's a view when buttons are disabled.
   open
   preview={<ButtonSnippet story="Disabled" />}
   code={buttonDisabledSnippet}
+/>
+
+### Loading
+
+Here's a view when buttons are in a loading state.
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<ButtonSnippet story="Loading" />}
+  code={buttonLoadingSnippet}
 />
 
 ### Responsive
