--- a/microsite/blog/2025-12-30-backstage-wrapped-2025.mdx
+++ b/microsite/blog/2025-12-30-backstage-wrapped-2025.mdx
@@ -27,7 +27,6 @@ As in years past, we've visualized how our vibrant global community lights up th
 
 _All 7.7k commits to `backstage/backstage` in 2025_
 
-
 <iframe
   src="https://www.youtube.com/embed/Vaz0AbOJdi0"
   width="100%"
@@ -51,20 +50,16 @@ Earlier this year, the Backstage project [celebrated its 5th birthday][bday] on 
 
 While the framework still isn't old enough to shave, it's matured into the industry standard for internal developer portals (IDPs). According to [this DX survey][dx] released in March:
 
->Backstage is dominating the IDP market, holding an impressive 89% market share compared to SaaS competitors and achieving a remarkable 67% overall market penetration. These percentages are even higher for enterprise companies.
+> Backstage is dominating the IDP market, holding an impressive 89% market share compared to SaaS competitors and achieving a remarkable 67% overall market penetration. These percentages are even higher for enterprise companies.
 
 As you can see above in the [latest project stats][video], the Backstage ecosystem continues to expand, growing in adopters and contributors, as well as plugins and third-party service providers.
 
 Want to dive into more Backstage stats? Check out the project's health scores and more on the relaunched [LFX Insights][lfx] site.
 
-[bday]: https://www.youtube.com/watch?v=JqG1wey7-Ao&t=563s&list=PL8iP9yIjU0Q3K8LV_a9CcFmhvvNTAUzL1 
-
+[bday]: https://www.youtube.com/watch?v=JqG1wey7-Ao&t=563s&list=PL8iP9yIjU0Q3K8LV_a9CcFmhvvNTAUzL1
 [kcon-eu]: https://backstage.io/blog/2025/04/29/backstagecon-kubecon-25-london#big-birthday-energy-on-the-big-stage
-
 [dx]: https://newsletter.getdx.com/p/backstage-and-the-developer-portal-market
-
-[video]: https://www.youtube.com/watch?v=Wih0a1v1Et0&list=PL8iP9yIjU0Q33vpSaBlAvIhgDb-9smXUU 
-
+[video]: https://www.youtube.com/watch?v=Wih0a1v1Et0&list=PL8iP9yIjU0Q33vpSaBlAvIhgDb-9smXUU
 [lfx]: https://insights.linuxfoundation.org/project/backstage
 
 ## Building the future on modern foundations
@@ -87,13 +82,9 @@ And [Backstage UI][ui] is coming! The alpha release of the upcoming design syste
 Catch up on a whole year's worth of improvements — and see where Backstage is heading next — in the recordings below.
 
 [backend]: https://backstage.io/docs/backend-system/
-
 [frontend]: https://backstage.io/docs/frontend-system/
-
 [1-42]: https://backstage.io/docs/releases/v1.42.0
-
 [actions]: https://backstage.io/docs/backend-system/core-services/actions-registry
-
 [ui]: https://ui.backstage.io/
 
 <iframe
@@ -113,13 +104,12 @@ _Watch the Backstage maintainers' talk at [KubeCon in London][lon], where they d
   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
 ></iframe>
-_Watch the maintainers' talk at [KubeCon in Atlanta][atl], where they shared work towards an AI-Native Backstage, progress on Backstage UI, and more._
+_Watch the maintainers' talk at [KubeCon in Atlanta][atl], where they shared
+work towards an AI-Native Backstage, progress on Backstage UI, and more._
 
 [lon]: https://backstage.io/blog/2025/04/29/backstagecon-kubecon-25-london
-
 [atl]: https://backstage.io/blog/2025/11/25/backstagecon-kubecon-25-atlanta
 
 ## See you in 2026!
 
 Happy New Year, Backstage Community! See you in the repos!
-
