--- a/docs-ui/src/content/toggle-button-group.mdx
+++ b/docs-ui/src/content/toggle-button-group.mdx
@@ -20,7 +20,7 @@ import { ToggleButtonGroupDefinition } from '../utils/definitions';
 
 <PageTitle
   title="ToggleButtonGroup"
-  description="A grouping container for related ToggleButtons supporting single or multiple selection."
+  description="A grouping container for related [ToggleButtons](./toggle-button) supporting single or multiple selection."
 />
 
 <Snippet
