--- a/docs-ui/src/content/toggle-button.mdx
+++ b/docs-ui/src/content/toggle-button.mdx
@@ -18,7 +18,7 @@ import { ToggleButtonDefinition } from '../utils/definitions';
 
 <PageTitle
   title="ToggleButton"
-  description="A button that toggles between selected and unselected states."
+  description="A button that toggles between selected and unselected states. Can be used as a single toggle or as part of a [ToggleButtonGroup](./toggle-button-group)."
 />
 
 <Snippet
