docs: Add surface examples to the ToggleButton/ToggleButtonGroups
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/docs-ui/src/content/toggle-button-group.mdx
+++ b/docs-ui/src/content/toggle-button-group.mdx
@@ -11,6 +11,7 @@ import {
   toggleButtonGroupDisallowEmptySnippet,
   toggleButtonGroupIconsSnippet,
   toggleButtonGroupIconsOnlySnippet,
+  toggleButtonGroupVariantsSnippet,
 } from './toggle-button-group.props';
 import { ToggleButtonGroupSnippet } from '@/snippets/stories-snippets';
 import { PageTitle } from '@/components/PageTitle';
@@ -39,6 +40,16 @@ import { ToggleButtonGroupDefinition } from '../utils/definitions';
 <PropsTable data={toggleButtonGroupPropDefs} />
 
 ## Examples
+
+### Variants
+
+<Snippet
+  align="center"
+  py={4}
+  open
+  preview={<ToggleButtonGroupSnippet story="Variants" />}
+  code={toggleButtonGroupVariantsSnippet}
+/>
 
 ### Single Selection
 
