chore: remove variants for now
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/docs-ui/src/content/toggle-button.mdx
+++ b/docs-ui/src/content/toggle-button.mdx
@@ -5,7 +5,7 @@ import { ToggleButtonSnippet } from '@/snippets/stories-snippets';
 import {
   toggleButtonPropDefs,
   toggleButtonUsageSnippet,
-  toggleButtonVariantsSnippet,
+  toggleButtonSurfacesSnippet,
   toggleButtonSizesSnippet,
   toggleButtonIconsSnippet,
   toggleButtonDisabledSnippet,
@@ -24,8 +24,8 @@ import { ToggleButtonDefinition } from '../utils/definitions';
 <Snippet
   align="center"
   py={4}
-  preview={<ToggleButtonSnippet story="Variants" />}
-  code={toggleButtonVariantsSnippet}
+  preview={<ToggleButtonSnippet story="Default" />}
+  code={toggleButtonUsageSnippet}
 />
 
 ## Usage
@@ -38,14 +38,14 @@ import { ToggleButtonDefinition } from '../utils/definitions';
 
 ## Examples
 
-### Variants
+### Surfaces
 
 <Snippet
   align="center"
   py={4}
   open
-  preview={<ToggleButtonSnippet story="Variants" />}
-  code={toggleButtonVariantsSnippet}
+  preview={<ToggleButtonSnippet story="Surfaces" />}
+  code={toggleButtonSurfacesSnippet}
 />
 
 ### Sizes
