--- a/docs-ui/src/content/toggle-button-group.mdx
+++ b/docs-ui/src/content/toggle-button-group.mdx
@@ -11,7 +11,7 @@ import {
   toggleButtonGroupDisallowEmptySnippet,
   toggleButtonGroupIconsSnippet,
   toggleButtonGroupIconsOnlySnippet,
-  toggleButtonGroupVariantsSnippet,
+  toggleButtonGroupSurfacesSnippet,
 } from './toggle-button-group.props';
 import { ToggleButtonGroupSnippet } from '@/snippets/stories-snippets';
 import { PageTitle } from '@/components/PageTitle';
@@ -41,14 +41,14 @@ import { ToggleButtonGroupDefinition } from '../utils/definitions';
 
 ## Examples
 
-### Variants
+### Surfaces
 
 <Snippet
   align="center"
   py={4}
   open
-  preview={<ToggleButtonGroupSnippet story="Variants" />}
-  code={toggleButtonGroupVariantsSnippet}
+  preview={<ToggleButtonGroupSnippet story="Surfaces" />}
+  code={toggleButtonGroupSurfacesSnippet}
 />
 
 ### Single Selection
