--- a/docs-ui/src/app/components/skeleton/page.mdx
+++ b/docs-ui/src/app/components/skeleton/page.mdx
@@ -11,10 +11,10 @@ import {
   skeletonDefaultSnippet,
   skeletonDemo1Snippet,
   skeletonDemo2Snippet,
-  skeletonTypographySnippet,
   skeletonInferringSnippet,
   skeletonInheritingSnippet,
   skeletonRealWorldSnippet,
+  skeletonOnSurfaceSnippet,
 } from './skeleton.props';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
@@ -30,11 +30,11 @@ import { SkeletonDefinition } from '../../../utils/definitions';
 
 ## Usage
 
-The Skeleton component automatically inherits typography from its parent context, preventing layout shift. It supports two usage patterns:
+The Skeleton component automatically inherits typography from its parent context, preventing layout shift. It supports three usage patterns:
 
-1. **Inside Text components** (recommended) - Skeleton automatically inherits font-size and line-height
-2. **Wrapping children** - Automatically matches dimensions of wrapped components
-3. **Explicit dimensions** - Set custom width and height for non-text content
+1. **Inside Text components** (recommended): Skeleton automatically inherits font-size and line-height
+2. **Wrapping children**: Automatically matches dimensions of wrapped components
+3. **Explicit dimensions**: Set custom width and height for non-text content
 
 > **Note**: When using Skeleton inside Text components, it works best for **single-line text** where you expect the content to fit on one line. For multi-line text, consider using multiple Skeleton components or wrapping children to infer dimensions.
 
@@ -48,7 +48,7 @@ The Skeleton component automatically inherits typography from its parent context
 
 ### Inheriting typography
 
-Place Skeleton inside a Text component and it automatically inherits the typography. No explicit sizing needed - the skeleton respects the theme's font-size and line-height!
+Place Skeleton inside a [Text](./text) component and it automatically inherits the typography. No explicit sizing needed as the skeleton respects the theme's font-size and line-height!
 
 > **Best for single-line text**: This pattern works best when you expect the content to be a single line. The skeleton will match the exact height of one line of text.
 
@@ -88,7 +88,7 @@ This example shows how to use Skeleton with Text components to prevent layout sh
 
 ### Demo 1
 
-You can use a mix of different sizes to create a more complex skeleton.
+A complex skeleton layout with avatar and multiple text lines.
 
 <Snippet
   align="center"
@@ -99,13 +99,25 @@ You can use a mix of different sizes to create a more complex skeleton.
 
 ### Demo 2
 
-You can use a mix of different sizes to create a more complex skeleton.
+A simple skeleton layout with image and text placeholders.
 
 <Snippet
   align="center"
   py={4}
   preview={<SkeletonSnippet story="Demo2" />}
   code={skeletonDemo2Snippet}
+/>
+
+### Surfaces
+
+Skeleton supports the `onSurface` prop to adapt its styling based on the surface it's placed on. By default (or when `onSurface="auto"` is specified), the skeleton automatically inherits the container's surface level, making skeletons reusable across different surfaces without explicit configuration.
+
+<Snippet
+  align="center"
+  py={4}
+  preview={<SkeletonSnippet story="OnSurface" />}
+  code={skeletonOnSurfaceSnippet}
+  open
 />
 
 <Theming definition={SkeletonDefinition} />
